--- a/source/_static/rtd_theme_overrides.css
+++ b/source/_static/rtd_theme_overrides.css
@@ -38,4 +38,5 @@
    font-style: italic;
    font-weight: 100;
    font-family: "Lato","proxima-nova","Helvetica Neue",Arial,sans-serif;
+   text-indent: inherit;
 }
